# awesometree

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  PROJECT_INTEROP_PLAN.md  README.md  awesometree-daemon.service  build.rs  com.awesometree.daemon.plist  docker-compose.test.yml  rc.lua.example
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/awesometree/mobile/: MainActivity.kt
android/app/src/main/kotlin/dev/awesometree/mobile/data/: ApiClient.kt  ConnectionStore.kt
android/app/src/main/kotlin/dev/awesometree/mobile/ui/: Theme.kt
android/app/src/main/kotlin/dev/awesometree/mobile/ui/acp/: AcpScreen.kt
android/app/src/main/kotlin/dev/awesometree/mobile/ui/projects/: ProjectsScreen.kt
android/app/src/main/kotlin/dev/awesometree/mobile/ui/settings/: SettingsScreen.kt
android/app/src/main/kotlin/dev/awesometree/mobile/ui/workspaces/: WorkspacesScreen.kt
android/app/src/main/res/values/: strings.xml  themes.xml
arp-spec/: identity-and-scopes.md  index.md  overview.md  services-agent.md  services-discovery.md  services-project.md  services-workspace.md  tools-agent.md  tools-discovery.md  tools-project.md  tools-workspace.md
core/: Cargo.toml
core/src/: client.rs  lib.rs  models.rs
docs/: architecture.md  keybindings.md
docs/specs/project-interop/: README.md  examples.md  rfc-0001-project-definition.md  rfc-0002-tool-scoping.md  rfc-0003-context-distribution.md  rfc-0004-multi-agent.md  rfc-0005-api.md  validate.py
docs/specs/project-interop/samples/: README.md
docs/specs/project-interop/samples/resource-proxy/: go.mod  main.go
docs/specs/project-interop/samples/tool-proxy/: go.mod  main.go
docs/specs/project-interop/schemas/: project.schema.json  servers.schema.json  session.schema.json
docs/specs/project-interop/schemas/testdata/: invalid-bad-launch-env.project.json  invalid-bad-name.project.json  invalid-bad-session-status.json  invalid-bad-version.project.json  invalid-http-no-url.json  invalid-negative-maxbytes.project.json  invalid-zero-concurrent.project.json  valid-full.project.json  valid-launch.project.json  valid-minimal.project.json  valid-repo-local.project.json  valid-servers.json  valid-session.json
docs/workspace-system/: configuration.md  lifecycle.md  lua-module.md  ws-cli.md
macos/: Info.plist
packaging/aur/: PKGBUILD
packaging/homebrew/: awesometree.rb
src/: a2a_proxy.rs  acp_supervisor.rs  agent_supervisor.rs  agents_ui.rs  arp_store.rs  auth.rs  cleanup_ui.rs  config.rs  daemon.rs  daemon_main.rs  interop.rs  lib.rs  log.rs  main.rs  notify.rs  paths.rs  picker.rs  projects_ui.rs  qr.rs  server.rs  state.rs  text_input.rs  theme.rs  tray.rs  ui_helpers.rs  user_env.rs  wm.rs  workspace.rs
src/grpc/: agent.rs  convert.rs  discovery.rs  http_bridge.rs  mod.rs  project.rs  token.rs  workspace.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools_agent.rs  tools_discovery.rs  tools_project.rs  tools_workspace.rs
test/: run-arp-tests.sh  spec-http.yaml
test/echo-agent/: .gitignore  Dockerfile  README.md  go.mod  main.go
test/fixtures/: state.json  test-project.project.json
tests/: screenshots.rs
