[workspace]
members = [".", "core"]
resolver = "3"

[package]
name = "awesometree"
version = "2026.4.8"
edition = "2024"

[features]
default = ["gui"]
gui = ["dep:gpui", "dep:tray", "dep:image", "dep:qrcode", "dep:unicode-segmentation", "dep:tray-menu", "dep:gtk"]
headless = []

[[bin]]
name = "awesometree"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "awesometree-daemon"
path = "src/daemon_main.rs"
required-features = ["gui"]

[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"
required-features = ["gui"]

[[bin]]
name = "arp-test-server"
path = "src/bin/arp_test_server.rs"

[dependencies]
awesometree-core = { path = "core" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4.5.60", features = ["derive"] }
crush-acp-sdk = { git = "https://github.com/aleksclark/crush-modules", branch = "master" }
futures = "0.3"
gpui = { version = "0.2.2", optional = true }
headers = "0.4"
hmac = "0.12"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
libc = "0.2"
qrcode = { version = "0.14", optional = true }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tray = { version = "0.1", optional = true }
futures-channel = "0.3"
futures-util = "0.3"
unicode-segmentation = { version = "1.11", optional = true }
glob = "0.3"
utoipa = "5"
utoipa-axum = "0.2"
base64 = "0.22"
a2a-rs-core = "1.0"
a2a-rs-client = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

# Linux-only dependencies (only used by GUI modules)
[target.'cfg(target_os = "linux")'.dependencies]
tray-menu = { version = "0.1", features = ["gtk"], optional = true }
gtk = { version = "0.18", optional = true }
