[package]
name = "awesometree-core"
version = "2026.4.8"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = "0.29"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
